--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         (function() {
             // 在这里配置您的下载链接
             const anzhuolink = "https://www.pgyer.com/aLejJyPW"; // 安卓下载链接
-            const ioslink = "";      // iOS下载链接
+            const ioslink = "https://www.pgyer.com/aLejJyPW";      // iOS下载链接
 
             const u = navigator.userAgent;
             const isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
